--- a/projekt/Base.lproj/Main.storyboard
+++ b/projekt/Base.lproj/Main.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,49 +22,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gvX-9K-ti6">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gvX-9K-ti6">
                                 <rect key="frame" x="0.0" y="49" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Ctc-4f-GkP" customClass="ItemCell" customModule="projekt" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="60" id="Ctc-4f-GkP" customClass="ItemCell" customModule="projekt" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ctc-4f-GkP" id="Vka-Nk-OO8">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VaB-sO-QLd">
-                                                    <rect key="frame" x="8" y="-7" width="79" height="58"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="VaB-sO-QLd" secondAttribute="height" multiplier="79:58" id="nxH-jY-5LX"/>
-                                                        <constraint firstAttribute="width" constant="79" id="xKb-q5-IRE"/>
-                                                    </constraints>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VaB-sO-QLd">
+                                                    <rect key="frame" x="14" y="15" width="59.5" height="29.5"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qE-2C-6eH">
-                                                    <rect key="frame" x="95" y="23" width="233" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ip3-rU-lRH">
+                                                    <rect key="frame" x="88" y="0.0" width="253" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ip3-rU-lRH">
-                                                    <rect key="frame" x="95" y="0.0" width="148" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qE-2C-6eH">
+                                                    <rect key="frame" x="88" y="21" width="253" height="39"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wex-Y8-iIp">
+                                                    <rect key="frame" x="349" y="0.0" width="26" height="60"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="148" id="kLV-vq-NOI"/>
+                                                        <constraint firstAttribute="width" constant="26" id="ucl-Cu-S8e"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <state key="normal" title="Button" image="icons8-Forward-15"/>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="VaB-sO-QLd" firstAttribute="top" secondItem="Vka-Nk-OO8" secondAttribute="topMargin" constant="-15" id="AB7-vk-I9H"/>
-                                                <constraint firstItem="ip3-rU-lRH" firstAttribute="top" secondItem="Vka-Nk-OO8" secondAttribute="top" id="Lu4-6q-73I"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="8qE-2C-6eH" secondAttribute="trailing" constant="39" id="TLG-IX-GPA"/>
-                                                <constraint firstItem="ip3-rU-lRH" firstAttribute="leading" secondItem="8qE-2C-6eH" secondAttribute="leading" id="TiZ-Ql-HMe"/>
-                                                <constraint firstItem="8qE-2C-6eH" firstAttribute="top" secondItem="ip3-rU-lRH" secondAttribute="bottom" constant="2" id="VeE-Sm-cJu"/>
-                                                <constraint firstItem="ip3-rU-lRH" firstAttribute="leading" secondItem="VaB-sO-QLd" secondAttribute="trailing" constant="8" symbolic="YES" id="ZZZ-cL-YFF"/>
-                                                <constraint firstItem="VaB-sO-QLd" firstAttribute="centerY" secondItem="Vka-Nk-OO8" secondAttribute="centerY" id="rUb-QV-0eE"/>
-                                                <constraint firstItem="VaB-sO-QLd" firstAttribute="leading" secondItem="Vka-Nk-OO8" secondAttribute="leadingMargin" id="xyY-iX-jGZ"/>
+                                                <constraint firstItem="8qE-2C-6eH" firstAttribute="leading" secondItem="VaB-sO-QLd" secondAttribute="trailing" constant="14.5" id="1yg-ll-vfA"/>
+                                                <constraint firstItem="Wex-Y8-iIp" firstAttribute="top" secondItem="Vka-Nk-OO8" secondAttribute="top" id="2EC-qk-vqe"/>
+                                                <constraint firstAttribute="bottom" secondItem="8qE-2C-6eH" secondAttribute="bottom" id="Bwu-GW-nwv"/>
+                                                <constraint firstItem="VaB-sO-QLd" firstAttribute="leading" secondItem="Vka-Nk-OO8" secondAttribute="leading" constant="14" id="Dck-zP-2Iy"/>
+                                                <constraint firstItem="Wex-Y8-iIp" firstAttribute="leading" secondItem="8qE-2C-6eH" secondAttribute="trailing" constant="8" id="MYb-4J-46k"/>
+                                                <constraint firstItem="ip3-rU-lRH" firstAttribute="top" secondItem="Vka-Nk-OO8" secondAttribute="top" id="QBx-Wu-ECC"/>
+                                                <constraint firstAttribute="trailing" secondItem="Wex-Y8-iIp" secondAttribute="trailing" id="QbW-xb-zOO"/>
+                                                <constraint firstItem="VaB-sO-QLd" firstAttribute="width" secondItem="Vka-Nk-OO8" secondAttribute="height" multiplier="1:1" identifier="ratio11" id="RuY-ZO-nmJ"/>
+                                                <constraint firstItem="VaB-sO-QLd" firstAttribute="top" secondItem="Vka-Nk-OO8" secondAttribute="top" constant="15" id="Uci-i3-Yaz"/>
+                                                <constraint firstAttribute="trailing" secondItem="ip3-rU-lRH" secondAttribute="trailing" constant="34" id="bKX-yl-dXU"/>
+                                                <constraint firstAttribute="bottom" secondItem="Wex-Y8-iIp" secondAttribute="bottom" id="d2n-i6-MeM"/>
+                                                <constraint firstAttribute="bottom" secondItem="VaB-sO-QLd" secondAttribute="bottom" constant="15" id="e6g-WO-O5x"/>
+                                                <constraint firstItem="8qE-2C-6eH" firstAttribute="top" secondItem="ip3-rU-lRH" secondAttribute="bottom" id="feh-JG-67k"/>
+                                                <constraint firstAttribute="trailing" secondItem="Wex-Y8-iIp" secondAttribute="trailing" id="nKZ-7Y-vDs"/>
+                                                <constraint firstAttribute="bottom" secondItem="Wex-Y8-iIp" secondAttribute="bottom" id="quY-Xy-PG2"/>
+                                                <constraint firstItem="8qE-2C-6eH" firstAttribute="top" secondItem="ip3-rU-lRH" secondAttribute="bottom" id="wcb-vo-1wq"/>
+                                                <constraint firstItem="ip3-rU-lRH" firstAttribute="leading" secondItem="VaB-sO-QLd" secondAttribute="trailing" constant="14.5" id="yCk-zb-6AM"/>
+                                                <constraint firstItem="Wex-Y8-iIp" firstAttribute="top" secondItem="Vka-Nk-OO8" secondAttribute="top" id="yEK-yK-24B"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -109,4 +118,7 @@
             <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icons8-Forward-15" width="15" height="15"/>
+    </resources>
 </document>
